--- a/index.html
+++ b/index.html
@@ -11,66 +11,68 @@
 
 <body>
     <h2>Rsponsive CSS3 Pircing Tables</h2>
-    <div class="col">
-        <ul class="price-box">
-            <li class="header">Simple</li>
-            <li class="emph">
-                <strong>$ 5.99</strong>/ Month </li>
-            <li>
-                <strong>20GB</strong>Disk Space</li>
-            <li>
-                <strong>10GB</strong> Data Transfer</li>
-            <li>
-                <strong>2</strong> Domains</li>
-            <li>
-                <strong>50</strong> Email Accounts</li>
-            <li>
-                <strong>2</strong> FTP Accounts</li>
-            <li class="emph">
-                <a href="#" class="button">Sign Up</a>
-            </li>
-        </ul>
-    </div>
+    <div class="container">
+        <div class="col">
+            <ul class="price-box">
+                <li class="header">Simple</li>
+                <li class="emph">
+                    <strong>$ 5.99</strong>/ Month </li>
+                <li>
+                    <strong>20GB</strong>Disk Space</li>
+                <li>
+                    <strong>10GB</strong> Data Transfer</li>
+                <li>
+                    <strong>2</strong> Domains</li>
+                <li>
+                    <strong>50</strong> Email Accounts</li>
+                <li>
+                    <strong>2</strong> FTP Accounts</li>
+                <li class="emph">
+                    <a href="#" class="button">Sign Up</a>
+                </li>
+            </ul>
+        </div>
 
-    <div class="col">
-        <ul class="price-box best">
-            <li class="header header-green">Standard</li>
-            <li class="emph">
-                <strong>$ 15.99</strong>/ Month </li>
-            <li>
-                <strong>75GB</strong>Disk Space</li>
-            <li>
-                <strong>50GB</strong> Data Transfer</li>
-            <li>
-                <strong>10</strong> Domains</li>
-            <li>
-                <strong>100</strong> Email Accounts</li>
-            <li>
-                <strong>Unlimited</strong> FTP Accounts</li>
-            <li class="emph">
-                <a href="#" class="button">Sign Up</a>
-            </li>
-        </ul>
-    </div>
-    <div class="col">
-        <ul class="price-box">
-            <li class="header">Simple</li>
-            <li class="emph">
-                <strong>$ 25.99</strong>/ Month </li>
-            <li>
-                <strong>120GB</strong>Disk Space</li>
-            <li>
-                <strong>100GB</strong> Data Transfer</li>
-            <li>
-                <strong>Unlimited</strong> Domains</li>
-            <li>
-                <strong>Unlimited</strong> Email Accounts</li>
-            <li>
-                <strong>Unlimited</strong> FTP Accounts</li>
-            <li class="emph">
-                <a href="#" class="button">Sign Up</a>
-            </li>
-        </ul>
+        <div class="col">
+            <ul class="price-box best">
+                <li class="header header-green">Standard</li>
+                <li class="emph">
+                    <strong>$ 15.99</strong>/ Month </li>
+                <li>
+                    <strong>75GB</strong>Disk Space</li>
+                <li>
+                    <strong>50GB</strong> Data Transfer</li>
+                <li>
+                    <strong>10</strong> Domains</li>
+                <li>
+                    <strong>100</strong> Email Accounts</li>
+                <li>
+                    <strong>Unlimited</strong> FTP Accounts</li>
+                <li class="emph">
+                    <a href="#" class="button">Sign Up</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col">
+            <ul class="price-box">
+                <li class="header">Simple</li>
+                <li class="emph">
+                    <strong>$ 25.99</strong>/ Month </li>
+                <li>
+                    <strong>120GB</strong>Disk Space</li>
+                <li>
+                    <strong>100GB</strong> Data Transfer</li>
+                <li>
+                    <strong>Unlimited</strong> Domains</li>
+                <li>
+                    <strong>Unlimited</strong> Email Accounts</li>
+                <li>
+                    <strong>Unlimited</strong> FTP Accounts</li>
+                <li class="emph">
+                    <a href="#" class="button">Sign Up</a>
+                </li>
+            </ul>
+        </div>
     </div>
     <script src="scripts/script.js"></script>
 </body>
